Large professional update
rebranding, animation, update information, design

--- a/printing.html
+++ b/printing.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Stephen Wenzel</title>
+    <title>Printing - Stephen Wenzel</title>
     <link rel="shortcut icon" type="image/jpg" href="/resume/stephen wenzel logo.png"/>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -27,6 +27,7 @@
 <header class="container">
     <div class="row buttons">
         <a href="javascript:window.print()" role="button" class="btn btn-info col-7 col-sm-7 mb-3">Click to Print</a>
+        <p class="col-12 col-sm-12">If available, please choose to include background graphics to increase the the resume's legibility.</p>
         <a href="index.html" role="button" class="btn btn-info col-7 col-sm-7 mt-3">Go Back</a>
     </div>
 </header>
@@ -63,11 +64,12 @@
                 <p class="col-12 col-sm-12 e-time"><i>January 2022 - Present</i></p>
                 <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
                 <ul clas="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Reads and critiques published scientific literature regarding the effects of various drug treatments on acetylated and de-acetylated microtubules, assessing the interactions of mitochondria with dynamic instability in <i>D. melanogaster</i></li>
-                    <li class="col-12 col-sm-12">Generated next-step hypotheses and means to test those hypotheses from information gathered from previously conducted experiments</li>
-                    <li class="col-12 col-sm-12">Operates a fluorescence microscope (Nikon Eclipse Ti) along with a confocal lens in order to capture kymographs of mitochondria movement along microtubules</li>
-                    <li class="col-12 col-sm-12">Generated and executed experiments with rigor and reproducibility</li>
-                    <li class="col-12 col-sm-12">Analyzed, quantified, and presented data in order to effectively explain experimental results to individuals both within and outside of the scientific community</li>
+                    <li class="col-12 col-sm-12">Analyzes and critiques published scientific literature pertaining to the effects of drug treatments on acetylated and de-acetylated microtubules in <i>D. melanogaster</i></li>
+                    <li class="col-12 col-sm-12">Generates next-step hypotheses and means to test those hypotheses from information gathered by previously conducted experiments</li>
+                    <li class="col-12 col-sm-12">Operates a fluorescence microscope (Nikon Eclipse Ti) along with a confocal lens in order to capture kymographs of mitochondria movement along microtubules, tracking displacement and analyzing for velocity and acceleration given various drug treatments</li>
+                    <li class="col-12 col-sm-12">Generates and executes experiments with rigor and reproducibility</li>
+                    <li class="col-12 col-sm-12">Analyzes, quantifies, and presents data in order to effectively explain experimental results to individuals both within and outside of the scientific community</li>
+                    <li class="col-12 col-sm-12">Programs in R, as well as HTML and CSS, in order to create meaningful graphs and figures</li>
                 </ul>
             </article>
 
@@ -78,9 +80,9 @@
                 <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
                 <ul clas="col-12 col-sm-12">
                     <li class="col-12 col-sm-12">Generates study aids and supplemental worksheets for students enrolled in the second course of organic chemistry at UNC Chapel Hill</li>
-                    <li class="col-12 col-sm-12">Provides aid in terms of learning strategies, concept review, upper-level thinking to students in a diverse classroom environment</li>
-                    <li class="col-12 col-sm-12">Collaborates with the peer mentor team and the instructor to improve the understanding of important organic chemistry concepts among students</li>
-                    <li class="col-12 col-sm-12">Develops problem-solving skills in order to maximize potential as a resource for students</li>
+                    <li class="col-12 col-sm-12">Provides aid through learning strategies, concept review, upper-level thinking questions for students in a diverse classroom environment</li>
+                    <li class="col-12 col-sm-12">Collaborates with a peer mentor team and the instructor to improve the understanding of important organic chemistry concepts among students</li>
+                    <li class="col-12 col-sm-12">Develops problem-solving skills in order to maximize potential as a peer mentor</li>
                 </ul>
             </article>
 
@@ -94,8 +96,8 @@
                     <li class="col-12 col-sm-12">Respectfully communicates with a diverse population of individuals in order to ensure a valuable and helpful experience</li>
                     <li class="col-12 col-sm-12">Demonstrates understanding of how cultures, values, and morals impact behavior and health care decisions</li>
                     <li class="col-12 col-sm-12">Acts to remove potential communication barriers between volunteers and the public, acting to further the mission of the organization</li>
-                    <li class="col-12 col-sm-12">Remains a valuable resource for individuals testing for COVID-19 by staying up-to-date on current safe practices regarding testing and the pandemic</li>
-                    <li class="col-12 col-sm-12">Minimizing the spread of COVID-19 by persevering as a volunteer through increased rates of transmission with Omicron as well as the rise of the Delta variant</li>
+                    <li class="col-12 col-sm-12">Serves as a valuable resource for individuals testing for COVID-19 by staying up-to-date on current safe practices regarding testing and the pandemic</li>
+                    <li class="col-12 col-sm-12">Volunteers in order to help an organization aiming to minimize the spread of the variants of COVID-19</li>
                 </ul>
             </article>
 
@@ -105,7 +107,7 @@
                 <p class="col-12 col-sm-12 e-time"><i>Mar 2016 - Present</i></p>
                 <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
                 <ul clas="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Manages the production and editing of images using Adobe Suite</li>
+                    <li class="col-12 col-sm-12">Manages the production and editing of images using Adobe Suite: Photoshop and Lightroom</li>
                     <li class="col-12 col-sm-12">Communicates with clients to efficiently and creatively portray them in contrast with their surroundings</li>
                     <li class="col-12 col-sm-12">Develops knowledge regarding physics of the camera body and equipment used to capture images in differing environments</li>
                     <li class="col-12 col-sm-12">Generates a user-friendly and exciting customer experience both online and during the session</li>
@@ -135,22 +137,22 @@
                 <p class="col-12 col-sm-12 e-time"><i>Summers of 2018, 2019, & 2021</i></p>
                 <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
                 <ul clas="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Managed the layout of website content for optimal user experience using HTML and CSS through the Wix website builder</li>
+                    <li class="col-12 col-sm-12">Managed the layout of website content for optimal user experience using HTML and CSS, as well as the Wix website builder</li>
                     <li class="col-12 col-sm-12">Created content via photography, videography, blog posts, and website content in order to maximize public outreach</li>
                     <li class="col-12 col-sm-12">Shadowed otolaryngologists in order to learn about medical and surgical treatment of hearing loss, ear infections, balance disorders, tinnitus, nerve pain, and facial and cranial nerve disorders</li>
                 </ul>
             </article>
 
             <!--Added extra margin and padding so that it can go to the next page-->
-            <article class="mt-5 pt-2 col-12 col-sm-12 col-lg-10 e-about">
+            <article id="extra_margin" class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Volunteer Photographer</h4>
                 <h5 class="col-12 col-sm-12 e-co">Folkmoot International Dance Festival</h5>
                 <p class="col-12 col-sm-12 e-time"><i>Summers of 2018 - 2021</i></p>
                 <p class="col-12 col-sm-12 e-location">Waynesville, North Carolina</p>
                 <ul clas="col-12 col-sm-12">
                     <li class="col-12 col-sm-12">Captured photos at all performances and events throughout the annual summer folk dance festival</li>
-                    <li class="col-12 col-sm-12">Captured over 3000 images each year, effectively editing over 400 photos each year through Adobe Lightroom and Photoshop for the client’s usage</li>
-                    <li class="col-12 col-sm-12">Publicized and promoted festival performances and events through Instagram and Facebook social platforms</li>
+                    <li class="col-12 col-sm-12">Captured over 2000 images each year, creatively editing 300 photos of them through Adobe Lightroom and Photoshop for the client’s usage</li>
+                    <li class="col-12 col-sm-12">Publicized and promoted festival performances and events through Instagram and Facebook social platforms in order to help the client with social media outreach</li>
                 </ul>
             </article>
 
@@ -191,19 +193,40 @@
     <section class="row experience skills">
         <h2 class="col-12 col-sm-12 section-titles">Skills</h2>
         <section class="col-12 col-sm-12 group">
-            <article class="col-12 col-sm-12 e-about">
-                <p class="col-12 col-sm-12">Adobe Suite: <i>Photoshop, Lightroom</i></p>
-                <p class="col-12 col-sm-12">Buffer Creation</p>
-                <p class="col-12 col-sm-12">Confocal Lenses - Cellular Photography & Videography</p>
-                <p class="col-12 col-sm-12">Fiji Image Processor</p>
-                <p class="col-12 col-sm-12">Fluorescence Microscopy (Nikon Eclipse Series)</p>
-                <p class="col-12 col-sm-12">High Performance Liquid (HPL) Chromatography</p>
-                <p class="col-12 col-sm-12">HTML5, CSS3 - Front-End Web Design</p>
-                <p class="col-12 col-sm-12">NMR Spectrometry</p>
-                <p class="col-12 col-sm-12">R for Data Science</p>
-                <p class="col-12 col-sm-12">Solvent-Solvent Extractions</p>
-                <p class="col-12 col-sm-12">UV-Vis Spectrometry</p>
-                <p class="col-12 col-sm-12">Writing for Scientific Projects</p>
+            <article class="col-12 col-sm-12 col-lg-10 e-about">
+                <h4 class="col-12 col-sm-12 e-titles">Research-Related Skills</h4>
+                <ul class="col-12 col-sm-12" style="padding-left: 10vw;">
+                    <li class="col-12 col-sm-12">Biocyc Genome Database Collection</li>
+                    <li class="col-12 col-sm-12">Buffer Creation</li>
+                    <li class="col-12 col-sm-12">Confocal Lenses - Cellular Photography & Videography</li>
+                    <li class="col-12 col-sm-12">Fluorescence Microscopy (Nikon Eclipse Series)</li>
+                    <li class="col-12 col-sm-12">High Performance Liquid (HPL) Chromatography</li>
+                    <li class="col-12 col-sm-12">NMR Spectrometry</li>
+                    <li class="col-12 col-sm-12">Solvent-Solvent Extractions</li>
+                    <li class="col-12 col-sm-12">UV-Vis Spectrometry</li>
+                    <li class="col-12 col-sm-12">Writing for Scientific Projects</li>
+                </ul>
+                <h4 class="col-12 col-sm-12 e-titles">Technical Skills</h4>
+                <ul class="col-12 col-sm-12" style="padding-left: 10vw;">
+                    <li class="col-12 col-sm-12">Adobe Suite: <i>Photoshop, Lightroom</i></li>
+                    <li class="col-12 col-sm-12">Basic Local Alignment Search Tool (BLAST)</li>
+                    <li class="col-12 col-sm-12">DSLR Camera Photography</li>
+                    <li class="col-12 col-sm-12">Fiji Image Processor</li>
+                    <li class="col-12 col-sm-12">HTML5, CSS3 - Front-End Web Design</li>
+                    <li class="col-12 col-sm-12">MEGA11: Molecular Evolutionary Genetics Analysis Version 11</li>
+                    <li class="col-12 col-sm-12">R for Data Science</li>
+                </ul>
+                <h4 class="col-12 col-sm-12 e-titles">Soft Skills</h4>
+                <ul class="col-12 col-sm-12" style="padding-left: 10vw;">
+                    <li class="col-12 col-sm-12">Career Management</li>
+                    <li class="col-12 col-sm-12">Communication</li>
+                    <li class="col-12 col-sm-12">Creativity & Problem-Solving</li>
+                    <li class="col-12 col-sm-12">Global Perspective</li>
+                    <li class="col-12 col-sm-12">Leadership</li>
+                    <li class="col-12 col-sm-12">Professionalism & Work Ethic</li>
+                    <li class="col-12 col-sm-12">Teamwork & Collaboration</li>
+                    <li class="col-12 col-sm-12">Technical Application</li>
+                </ul>
             </article>
         </section>
     </section>
