--- a/experience.html
+++ b/experience.html
@@ -67,13 +67,13 @@
                 <h5 class="col-12 col-sm-12 e-co">Dr. Stephen Rogers' Lab - UNC Chapel Hill Biology Department</h5>
                 <p class="col-12 col-sm-12 e-time"><i>January 2022 - Present</i></p>
                 <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
-                <ul clas="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Analyzes and critiques published scientific literature pertaining to the effects of drug treatments on acetylated and de-acetylated microtubules in <i>D. melanogaster</i></li>
-                    <li class="col-12 col-sm-12">Generates next-step hypotheses and means to test those hypotheses from information gathered by previously conducted experiments</li>
-                    <li class="col-12 col-sm-12">Operates a fluorescence microscope (Nikon Eclipse Ti) along with a confocal lens in order to capture kymographs of mitochondria movement along microtubules, tracking displacement and analyzing for velocity and acceleration given various drug treatments</li>
-                    <li class="col-12 col-sm-12">Generates and executes experiments with rigor and reproducibility</li>
-                    <li class="col-12 col-sm-12">Analyzes, quantifies, and presents data in order to effectively explain experimental results to individuals both within and outside of the scientific community</li>
-                    <li class="col-12 col-sm-12">Programs in R, as well as HTML and CSS, in order to create meaningful graphs and figures</li>
+                <ul class="col-12 col-sm-12">
+                    <li class="col-12 col-sm-11">Analyzes and critiques published scientific literature pertaining to the effects of drug treatments on acetylated and de-acetylated microtubules in <i>D. melanogaster</i></li>
+                    <li class="col-12 col-sm-11">Generates next-step hypotheses and means to test those hypotheses from information gathered by previously conducted experiments</li>
+                    <li class="col-12 col-sm-11">Operates a fluorescence microscope (Nikon Eclipse Ti) along with a confocal lens in order to capture kymographs of mitochondria movement along microtubules, tracking displacement and analyzing for velocity and acceleration given various drug treatments</li>
+                    <li class="col-12 col-sm-11">Generates and executes experiments with rigor and reproducibility</li>
+                    <li class="col-12 col-sm-11">Analyzes, quantifies, and presents data in order to effectively explain experimental results to individuals both within and outside of the scientific community</li>
+                    <li class="col-12 col-sm-11">Programs in R, as well as HTML and CSS, in order to create meaningful graphs and figures</li>
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
@@ -87,11 +87,11 @@
                 <h5 class="col-12 col-sm-12 e-co">UNC Chapel Hill Chemistry Department</h5>
                 <p class="col-12 col-sm-12 e-time"><i>August 2021 - Present</i></p>
                 <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
-                <ul clas="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Generates study aids and supplemental worksheets for students enrolled in the second course of organic chemistry at UNC Chapel Hill</li>
-                    <li class="col-12 col-sm-12">Provides aid through learning strategies, concept review, upper-level thinking questions for students in a diverse classroom environment</li>
-                    <li class="col-12 col-sm-12">Collaborates with a peer mentor team and the instructor to improve the understanding of important organic chemistry concepts among students</li>
-                    <li class="col-12 col-sm-12">Develops problem-solving skills in order to maximize potential as a peer mentor</li>
+                <ul class="col-12 col-sm-12">
+                    <li class="col-12 col-sm-11">Generates study aids and supplemental worksheets for students enrolled in the second course of organic chemistry at UNC Chapel Hill</li>
+                    <li class="col-12 col-sm-11">Provides aid through learning strategies, concept review, upper-level thinking questions for students in a diverse classroom environment</li>
+                    <li class="col-12 col-sm-11">Collaborates with a peer mentor team and the instructor to improve the understanding of important organic chemistry concepts among students</li>
+                    <li class="col-12 col-sm-11">Develops problem-solving skills in order to maximize potential as a peer mentor</li>
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
@@ -101,17 +101,17 @@
             </article>
 
             <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <h4 class="col-12 col-sm-12 e-titles">Volunteer for COVID-19 Testing</h4>
+                <h4 class="col-12 col-sm-12 e-titles">Undergraduate COVID-19 Testing Volunteer</h4>
                 <h5 class="col-12 col-sm-12 e-co">Carolina COVID-19 Student Services Corps</h5>
                 <p class="col-12 col-sm-12 e-time"><i>August 2021 - Present</i></p>
                 <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
-                <ul clas="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Serves the students, faculty, and staff at UNC Chapel Hill in order to keep the university open during the course of the COVID-19 pandemic</li>
-                    <li class="col-12 col-sm-12">Respectfully communicates with a diverse population of individuals in order to ensure a valuable and helpful experience</li>
-                    <li class="col-12 col-sm-12">Demonstrates understanding of how cultures, values, and morals impact behavior and health care decisions</li>
-                    <li class="col-12 col-sm-12">Acts to remove potential communication barriers between volunteers and the public, acting to further the mission of the organization</li>
-                    <li class="col-12 col-sm-12">Serves as a valuable resource for individuals testing for COVID-19 by staying up-to-date on current safe practices regarding testing and the pandemic</li>
-                    <li class="col-12 col-sm-12">Volunteers in order to help an organization aiming to minimize the spread of the variants of COVID-19</li>
+                <ul class="col-12 col-sm-12">
+                    <li class="col-12 col-sm-11">Serves the students, faculty, and staff at UNC Chapel Hill in order to keep the university open during the course of the COVID-19 pandemic</li>
+                    <li class="col-12 col-sm-11">Respectfully communicates with a diverse population of individuals in order to ensure a valuable and helpful experience</li>
+                    <li class="col-12 col-sm-11">Demonstrates understanding of how cultures, values, and morals impact behavior and health care decisions</li>
+                    <li class="col-12 col-sm-11">Acts to remove potential communication barriers between volunteers and the public, acting to further the mission of the organization</li>
+                    <li class="col-12 col-sm-11">Serves as a valuable resource for individuals testing for COVID-19 by staying up-to-date on current safe practices regarding testing and the pandemic</li>
+                    <li class="col-12 col-sm-11">Volunteers in order to help an organization aiming to minimize the spread of the variants of COVID-19</li>
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
@@ -124,14 +124,14 @@
                 <h5 class="col-12 col-sm-12 e-co">Stephen Wenzel Photography</h5>
                 <p class="col-12 col-sm-12 e-time"><i>Mar 2016 - Present</i></p>
                 <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
-                <ul clas="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Manages the production and editing of images using Adobe Suite: Photoshop and Lightroom</li>
-                    <li class="col-12 col-sm-12">Communicates with clients to efficiently and creatively portray them in contrast with their surroundings</li>
-                    <li class="col-12 col-sm-12">Develops knowledge regarding physics of the camera body and equipment used to capture images in differing environments</li>
-                    <li class="col-12 col-sm-12">Generates a user-friendly and exciting customer experience both online and during the session</li>
-                    <li class="col-12 col-sm-12">Organizes a business plan that favors the client's needs and generates income for the business</li>
-                    <li class="col-12 col-sm-12">Donates 15 percent of profits to a local nonprofit, 501(c)(3), organization</li>
-                    <li class="col-12 col-sm-12">Serves over 50 clients across multiple counties in North Carolina</li>
+                <ul class="col-12 col-sm-12">
+                    <li class="col-12 col-sm-11">Manages the production and editing of images using Adobe Suite: Photoshop and Lightroom</li>
+                    <li class="col-12 col-sm-11">Communicates with clients to efficiently and creatively portray them in contrast with their surroundings</li>
+                    <li class="col-12 col-sm-11">Develops knowledge regarding physics of the camera body and equipment used to capture images in differing environments</li>
+                    <li class="col-12 col-sm-11">Generates a user-friendly and exciting customer experience both online and during the session</li>
+                    <li class="col-12 col-sm-11">Organizes a business plan that favors the client's needs and generates income for the business</li>
+                    <li class="col-12 col-sm-11">Donates 10 percent of profits to a local nonprofit, 501(c)(3), organization</li>
+                    <li class="col-12 col-sm-11">Serves over 50 clients across multiple counties in North Carolina</li>
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
@@ -145,11 +145,11 @@
                 <h5 class="col-12 col-sm-12 e-co">"Investigation of the Comparative Effects of Intralumenal Microtubule Acetylation on Drosophila S2 cells When Treated with Cytochalasin D"​</h5>
                 <p class="col-12 col-sm-12 e-time"><i>August 2021 - December 2021</i></p>
                 <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
-                <ul clas="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Read and critiqued published scientific literature in order to accurately gather information relevant to the experiments at hand</li>
-                    <li class="col-12 col-sm-12">Generated next-step hypotheses and means to test those hypotheses from information gathered from previously conducted experiments</li>
-                    <li class="col-12 col-sm-12">Generated and executed experiments with rigor and reproducibility</li>
-                    <li class="col-12 col-sm-12">Analyzed, quantified, and presented data in order to effectively explain experimental results to individuals both within and outside of the scientific community</li>
+                <ul class="col-12 col-sm-12">
+                    <li class="col-12 col-sm-11">Read and critiqued published scientific literature in order to accurately gather information relevant to the experiments at hand</li>
+                    <li class="col-12 col-sm-11">Generated next-step hypotheses and means to test those hypotheses from information gathered from previously conducted experiments</li>
+                    <li class="col-12 col-sm-11">Generated and executed experiments with rigor and reproducibility</li>
+                    <li class="col-12 col-sm-11">Analyzed, quantified, and presented data in order to effectively explain experimental results to individuals both within and outside of the scientific community</li>
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
@@ -164,10 +164,10 @@
                 <h5 class="col-12 col-sm-12 e-co">Western Carolina Ear, Nose and Throat</h5>
                 <p class="col-12 col-sm-12 e-time"><i>Summers of 2018, 2019, & 2021</i></p>
                 <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
-                <ul clas="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Managed the layout of website content for optimal user experience using HTML and CSS, as well as the Wix website builder</li>
-                    <li class="col-12 col-sm-12">Created content via photography, videography, blog posts, and website content in order to maximize public outreach</li>
-                    <li class="col-12 col-sm-12">Shadowed otolaryngologists in order to learn about medical and surgical treatment of hearing loss, ear infections, balance disorders, tinnitus, nerve pain, and facial and cranial nerve disorders</li>
+                <ul class="col-12 col-sm-12">
+                    <li class="col-12 col-sm-11">Managed the layout of website content for optimal user experience using HTML and CSS, as well as the Wix website builder</li>
+                    <li class="col-12 col-sm-11">Created content via photography, videography, blog posts, and website content in order to maximize public outreach</li>
+                    <li class="col-12 col-sm-11">Shadowed otolaryngologists in order to learn about medical and surgical treatment of hearing loss, ear infections, balance disorders, tinnitus, nerve pain, and facial and cranial nerve disorders</li>
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
@@ -180,10 +180,10 @@
                 <h5 class="col-12 col-sm-12 e-co">Folkmoot International Dance Festival</h5>
                 <p class="col-12 col-sm-12 e-time"><i>Summers of 2018 - 2021</i></p>
                 <p class="col-12 col-sm-12 e-location">Waynesville, North Carolina</p>
-                <ul clas="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Captured photos at all performances and events throughout the annual summer folk dance festival</li>
-                    <li class="col-12 col-sm-12">Captured over 2000 images each year, creatively editing 300 photos of them through Adobe Lightroom and Photoshop for the client’s usage</li>
-                    <li class="col-12 col-sm-12">Publicized and promoted festival performances and events through Instagram and Facebook social platforms in order to help the client with social media outreach</li>
+                <ul class="col-12 col-sm-12">
+                    <li class="col-12 col-sm-11">Captured photos at all performances and events throughout the annual summer folk dance festival</li>
+                    <li class="col-12 col-sm-11">Captured over 2000 images each year, creatively editing 300 photos of them through Adobe Lightroom and Photoshop for the client’s usage</li>
+                    <li class="col-12 col-sm-11">Publicized and promoted festival performances and events through Instagram and Facebook social platforms in order to help the client with social media outreach</li>
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
@@ -196,9 +196,9 @@
                 <h5 class="col-12 col-sm-12 e-co">UNC Adams School of Dentistry</h5>
                 <p class="col-12 col-sm-12 e-time"><i>Summer 2020</i></p>
                 <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
-                <ul clas="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Progressed towards a common definition of the word “competence” for all health-related professions to improve the applicant review process</li>
-                    <li class="col-12 col-sm-12">Utilized Microsoft Excel for decisions related to choosing related research papers to further the research progress, using formulas and sorting</li>
+                <ul class="col-12 col-sm-12">
+                    <li class="col-12 col-sm-11">Progressed towards a common definition of the word “competence” for all health-related professions to improve the applicant review process</li>
+                    <li class="col-12 col-sm-11">Utilized Microsoft Excel for decisions related to choosing related research papers to further the research progress, using formulas and sorting</li>
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
