--- a/printing.html
+++ b/printing.html
@@ -87,7 +87,7 @@
             </article>
 
             <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <h4 class="col-12 col-sm-12 e-titles">Volunteer for COVID-19 Testing</h4>
+                <h4 class="col-12 col-sm-12 e-titles">Undergraduate COVID-19 Testing Volunteer</h4>
                 <h5 class="col-12 col-sm-12 e-co">Carolina COVID-19 Student Services Corps</h5>
                 <p class="col-12 col-sm-12 e-time"><i>August 2021 - Present</i></p>
                 <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
@@ -194,27 +194,23 @@
         <h2 class="col-12 col-sm-12 section-titles">Skills</h2>
         <section class="col-12 col-sm-12 group">
             <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <h4 class="col-12 col-sm-12 e-titles">Research-Related Skills</h4>
-                <ul class="col-12 col-sm-12" style="padding-left: 10vw;">
-                    <li class="col-12 col-sm-12">Biocyc Genome Database Collection</li>
-                    <li class="col-12 col-sm-12">Buffer Creation</li>
-                    <li class="col-12 col-sm-12">Confocal Lenses - Cellular Photography & Videography</li>
-                    <li class="col-12 col-sm-12">Fluorescence Microscopy (Nikon Eclipse Series)</li>
-                    <li class="col-12 col-sm-12">High Performance Liquid (HPL) Chromatography</li>
-                    <li class="col-12 col-sm-12">NMR Spectrometry</li>
-                    <li class="col-12 col-sm-12">Solvent-Solvent Extractions</li>
-                    <li class="col-12 col-sm-12">UV-Vis Spectrometry</li>
-                    <li class="col-12 col-sm-12">Writing for Scientific Projects</li>
-                </ul>
-                <h4 class="col-12 col-sm-12 e-titles">Technical Skills</h4>
+                <h4 class="col-12 col-sm-12 e-titles">STEM-Related Skills</h4>
                 <ul class="col-12 col-sm-12" style="padding-left: 10vw;">
                     <li class="col-12 col-sm-12">Adobe Suite: <i>Photoshop, Lightroom</i></li>
                     <li class="col-12 col-sm-12">Basic Local Alignment Search Tool (BLAST)</li>
+                    <li class="col-12 col-sm-12">Biocyc Genome Database Collection</li>
+                    <li class="col-12 col-sm-12">Buffer Creation</li>
+                    <li class="col-12 col-sm-12">Confocal Lenses - Cellular Photography & Videography</li>
                     <li class="col-12 col-sm-12">DSLR Camera Photography</li>
                     <li class="col-12 col-sm-12">Fiji Image Processor</li>
-                    <li class="col-12 col-sm-12">HTML5, CSS3 - Front-End Web Design</li>
-                    <li class="col-12 col-sm-12">MEGA11: Molecular Evolutionary Genetics Analysis Version 11</li>
+                    <li class="col-12 col-sm-12">Fluorescence Microscopy (Nikon Eclipse Series)</li>
+                    <li class="col-12 col-sm-12">High Performance Liquid (HPL) Chromatography</li>
+                    <li class="col-12 col-sm-12">Front-End Web Design (HTML5, CSS3)</li>
+                    <li class="col-12 col-sm-12">(MEGA11) Molecular Evolutionary Genetics Analysis Version 11</li>
+                    <li class="col-12 col-sm-12">NMR Spectrometry</li>
                     <li class="col-12 col-sm-12">R for Data Science</li>
+                    <li class="col-12 col-sm-12">Solvent-Solvent Extractions</li>
+                    <li class="col-12 col-sm-12">Writing for Scientific Projects</li>
                 </ul>
                 <h4 class="col-12 col-sm-12 e-titles">Soft Skills</h4>
                 <ul class="col-12 col-sm-12" style="padding-left: 10vw;">
