--- a/skills.html
+++ b/skills.html
@@ -63,38 +63,34 @@
         <section class="col-12 col-sm-12 experience">
             <article class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Skills</h4>
-                <h5 class="col-12 col-sm-12 e-co">Research-Related Skills</h5>
                 <ul class="col-12 col-sm-12" style="padding-left: 10vw;">
-                    <li class="col-12 col-sm-12">Biocyc Genome Database Collection</li>
-                    <li class="col-12 col-sm-12">Buffer Creation</li>
-                    <li class="col-12 col-sm-12">Confocal Lenses - Cellular Photography & Videography</li>
-                    <li class="col-12 col-sm-12">Fluorescence Microscopy (Nikon Eclipse Series)</li>
-                    <li class="col-12 col-sm-12">High Performance Liquid (HPL) Chromatography</li>
-                    <li class="col-12 col-sm-12">NMR Spectrometry</li>
-                    <li class="col-12 col-sm-12">Solvent-Solvent Extractions</li>
-                    <li class="col-12 col-sm-12">UV-Vis Spectrometry</li>
-                    <li class="col-12 col-sm-12">Writing for Scientific Projects</li>
+                    <li class="col-12 col-sm-12 col-lg-6">Adobe Suite: <i>Photoshop, Lightroom</i></li>
+                    <li class="col-12 col-sm-12 col-lg-6">Basic Local Alignment Search Tool (BLAST)</li>
+                    <li class="col-12 col-sm-12 col-lg-6">Biocyc Genome Database Collection</li>
+                    <li class="col-12 col-sm-12 col-lg-6">Buffer Creation</li>
+                    <li class="col-12 col-sm-12 col-lg-6">Confocal Lenses - Cellular Photography & Videography</li>
+                    <li class="col-12 col-sm-12 col-lg-6">DSLR Camera Photography</li>
+                    <li class="col-12 col-sm-12 col-lg-6">Fiji Image Processor</li>
+                    <li class="col-12 col-sm-12 col-lg-6">Fluorescence Microscopy (Nikon Eclipse Series)</li>
+                    <li class="col-12 col-sm-12 col-lg-6">High Performance Liquid (HPL) Chromatography</li>
+                    <li class="col-12 col-sm-12 col-lg-6">Front-End Web Design (HTML5, CSS3)</li>
+                    <li class="col-12 col-sm-12 col-lg-6">(MEGA11) Molecular Evolutionary Genetics Analysis Version 11</li>
+                    <li class="col-12 col-sm-12 col-lg-6">NMR Spectrometry</li>
+                    <li class="col-12 col-sm-12 col-lg-6">R for Data Science</li>
+                    <li class="col-12 col-sm-12 col-lg-6">Solvent-Solvent Extractions</li>
+                    <li class="col-12 col-sm-12 col-lg-6">UV-Vis Spectrometry</li>
+                    <li class="col-12 col-sm-12 col-lg-6">Writing for Scientific Projects</li>
                 </ul>
-                <h5 class="col-12 col-sm-12 e-co">Technical Skills</h5>
+                <h5 class="col-12 col-sm-12 e-co"><u>Soft Skills</u></h5>
                 <ul class="col-12 col-sm-12" style="padding-left: 10vw;">
-                    <li class="col-12 col-sm-12">Adobe Suite: <i>Photoshop, Lightroom</i></li>
-                    <li class="col-12 col-sm-12">Basic Local Alignment Search Tool (BLAST)</li>
-                    <li class="col-12 col-sm-12">DSLR Camera Photography</li>
-                    <li class="col-12 col-sm-12">Fiji Image Processor</li>
-                    <li class="col-12 col-sm-12">HTML5, CSS3 - Front-End Web Design</li>
-                    <li class="col-12 col-sm-12">MEGA11: Molecular Evolutionary Genetics Analysis Version 11</li>
-                    <li class="col-12 col-sm-12">R for Data Science</li>
-                </ul>
-                <h5 class="col-12 col-sm-12 e-co">Soft Skills</h5>
-                <ul class="col-12 col-sm-12" style="padding-left: 10vw;">
-                    <li class="col-12 col-sm-12">Career Management</li>
-                    <li class="col-12 col-sm-12">Communication</li>
-                    <li class="col-12 col-sm-12">Creativity & Problem-Solving</li>
-                    <li class="col-12 col-sm-12">Global Perspective</li>
-                    <li class="col-12 col-sm-12">Leadership</li>
-                    <li class="col-12 col-sm-12">Professionalism & Work Ethic</li>
-                    <li class="col-12 col-sm-12">Teamwork & Collaboration</li>
-                    <li class="col-12 col-sm-12">Technical Application</li>
+                    <li class="col-12 col-sm-12 col-lg-6">Career Management</li>
+                    <li class="col-12 col-sm-12 col-lg-6">Communication</li>
+                    <li class="col-12 col-sm-12 col-lg-6">Creativity & Problem-Solving</li>
+                    <li class="col-12 col-sm-12 col-lg-6">Global Perspective</li>
+                    <li class="col-12 col-sm-12 col-lg-6">Leadership</li>
+                    <li class="col-12 col-sm-12 col-lg-6">Professionalism & Work Ethic</li>
+                    <li class="col-12 col-sm-12 col-lg-6">Teamwork & Collaboration</li>
+                    <li class="col-12 col-sm-12 col-lg-6">Technical Application</li>
                 </ul>
             </article>
             <article class="col-12 col-sm-12 col-lg-10 e-about">
