--- a/printing.html
+++ b/printing.html
@@ -35,7 +35,7 @@
     <section class="row header-content">
         <h1 class="col-12 col-sm-12 text-center">Stephen Wenzel</h1>
         <a class="col-6 col-sm-3 text-center" id="location">Chapel Hill, North Carolina</a>
-        <a class="col-3 col-sm-6 text-center" id="email" href="mailto:sawenzel@live.unc.edu">sawenzel@live.unc.edu</a>
+        <a class="col-3 col-sm-6 text-center" id="email" href="mailto:stephenawenzel@gmail.com">stephenawenzel@gmail.com</a>
         <a class="col-3 col-sm-3 text-center" id="phone" href="tel:8287344555">828-734-4555</a>
         <a class="col-12 col-sm-12 text-center" id="website_banner" href="https://stephenawenzel.github.io/resume/"><span>Link to view my interactive resume.</span></a>
     </section>
